data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1588.wast
;; 9. **Test Description**:     - Set up a loop with nested conditional blocks where a `br_if` with a false condition should correctly continue the loop.    - **Constraint Checking**: Ensures conditional blocks within loops are properly evaluated and continued depending on conditions.    - **Infinite Loop Relation**: Validates that the false condition doesn't exit prematurely, causing infinite continuation due to mismanaged stack transitions or labels.

(assert_invalid
  (module
    (func (loop (block (br_if 0 (i32.const 0)) (i32.const 1))))
  )
  "type mismatch"
)